[gd_scene load_steps=3 format=3 uid="uid://d1t087k7mdxvb"]

[ext_resource type="Script" path="res://world.gd" id="1_4avd2"]
[ext_resource type="Script" path="res://scripts/MatchUI.gd" id="12_1lrdw"]

[node name="MatchRoot" type="Node"]
script = ExtResource("1_4avd2")

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="MatchUI" type="CanvasLayer" parent="."]
script = ExtResource("12_1lrdw")

[node name="VBoxContainer" type="VBoxContainer" parent="MatchUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="Score" type="RichTextLabel" parent="MatchUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center][outline_size=8][outline_color=black]0 - 0"
fit_content = true
scroll_active = false

[connection signal="changed" from="." to="MatchUI" method="_on_match_root_changed"]
